--- a/src/lib/plugins/value/components/TimestampTag.scss
+++ b/src/lib/plugins/value/components/TimestampTag.scss
@@ -5,6 +5,6 @@
   margin: 0;
   height: var(--jse-line-height);
 
-  color: $red;
+  color: var(--jse-value-color-number);
   border-radius: $border-radius;
 }
