--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -7,7 +7,7 @@
   height: 100%;
   min-width: 0;
   min-height: 150px;
-  border: 1px solid var(--jse-menu-color);
+  border: 1px solid var(--jse-menu-background);
   position: relative;
   display: flex;
   flex-direction: row;
