--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -18,8 +18,8 @@
   display: flex;
   flex-direction: column;
 
-  font-family: $font-family;
-  font-size: $font-size;
+  font-family: var(--jse-font-family);
+  font-size: var(--jse-font-size);
   background: var(--jse-background-color);
   color: var(--jse-color);
 
