--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -135,7 +135,7 @@
   .jse-json-node {
     @include json-node-selected-mixin(
       --jse-selection-background-light-color,
-      $selection-background
+      var(--jse-selection-background-color)
     );
   }
 }
@@ -161,7 +161,7 @@
 .jse-index,
 .jse-bracket {
   vertical-align: top;
-  color: $meta-color;
+  color: var(--jse-delimiter-color);
 }
 
 .jse-index {
@@ -179,7 +179,7 @@
 .jse-tag {
   border: none;
   font-size: 80%;
-  font-family: $font-family;
+  font-family: var(--jse-font-family);
   color: var(--jse-tag-color);
   background: var(--jse-tag-background);
   border-radius: 2px;
