--- a/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -3,8 +3,8 @@
 .jse-contextmenu {
   box-shadow: $box-shadow;
 
-  font-family: $font-family;
-  font-size: $font-size;
+  font-family: var(--jse-font-family);
+  font-size: var(--jse-font-size);
   background: var(--jse-context-menu-background);
   color: var(--jse-context-menu-color);
 
@@ -53,7 +53,7 @@
         width: $size;
         height: $size;
 
-        font-family: $font-family-mono;
+        font-family: var(--jse-font-family-mono);
         font-weight: bold;
         font-size: 16px;
 
