--- a/src/lib/components/modes/treemode/menu/SearchBox.scss
+++ b/src/lib/components/modes/treemode/menu/SearchBox.scss
@@ -20,8 +20,8 @@ $padding-section-left: 32px;
     align-items: stretch;
 
     button {
-      font-family: $font-family;
-      font-size: $font-size;
+      font-family: var(--jse-font-family);
+      font-size: var(--jse-font-size);
       color: $light-gray;
       display: block;
       text-align: center;
@@ -39,8 +39,8 @@ $padding-section-left: 32px;
     }
 
     input {
-      font-family: $font-family;
-      font-size: $font-size;
+      font-family: var(--jse-font-family);
+      font-size: var(--jse-font-size);
       color: $black;
       border: 1px solid $border-gray;
       border-radius: $border-radius;
