--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -81,6 +81,10 @@
           color: var(--jse-panel-color-highlight);
         }
       }
+
+      :global(.cm-cursor-primary) {
+        border-color: var(--jse-color);
+      }
     }
 
     .jse-loading-space {
