fix: support theming in search boxes in both Tree and Code mode

--- a/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
@@ -19,6 +19,7 @@
     font-size: var(--jse-font-size-mono);
     border: none;
     background: transparent;
+    color: inherit;
     cursor: pointer;
     outline: none;
     text-align: left;
