--- a/src/lib/components/modes/treemode/menu/SearchBox.scss
+++ b/src/lib/components/modes/treemode/menu/SearchBox.scss
@@ -5,10 +5,11 @@ $button-width: 20px;
 $padding-section-left: 32px;
 
 .jse-search-box {
-  border: 1px solid $gray;
+  border: var(--jse-panel-border);
   border-radius: $border-radius;
 
-  background: $background-gray;
+  background: var(--jse-panel-background-color);
+  color: var(--jse-panel-color-readonly);
   box-shadow: $box-shadow;
   display: inline-block;
   width: 400px;
@@ -22,28 +23,29 @@ $padding-section-left: 32px;
     button {
       font-family: var(--jse-font-family);
       font-size: var(--jse-font-size);
-      color: $light-gray;
       display: block;
       text-align: center;
-      background: transparent;
       border: none;
       padding: 0 $input-padding;
       margin: 0;
       cursor: pointer;
 
-      &:hover,
-      &:active {
-        color: $gray;
-        background: $hovered-background;
+      color: var(--jse-panel-button-color);
+      background: var(--jse-panel-button-background);
+
+      &:hover {
+        color: var(--jse-panel-button-color-highlight);
+        background: var(--jse-panel-button-background-highlight);
       }
     }
 
     input {
       font-family: var(--jse-font-family);
       font-size: var(--jse-font-size);
-      color: $black;
-      border: 1px solid $border-gray;
+      color: var(--jse-panel-color);
+      border: var(--jse-panel-border);
       border-radius: $border-radius;
+      background: var(--jse-panel-input-background);
       height: $search-size;
       padding: 0 $input-padding;
       margin: 0;
@@ -54,13 +56,7 @@ $padding-section-left: 32px;
     .jse-replace-toggle {
       padding: $padding $padding-half;
       min-width: 20px;
-      background: darken($background-gray, 3%);
-
-      &:hover,
-      &:active {
-        color: $gray;
-        background: darken($background-gray, 5%);
-      }
+      background: var(--jse-panel-button-background-highlight);
     }
 
     .jse-search-contents {
@@ -78,7 +74,7 @@ $padding-section-left: 32px;
         padding-left: $padding-section-left;
 
         .jse-search-icon {
-          color: $light-gray;
+          color: inherit;
           cursor: inherit;
           background: inherit;
           position: absolute;
@@ -92,7 +88,7 @@ $padding-section-left: 32px;
         }
 
         .jse-search-count {
-          color: $light-gray;
+          color: inherit;
           font-size: 80%;
           visibility: hidden;
           padding: 0 $input-padding;
