--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -15,14 +15,16 @@
 
   /* navigation bar, gutter, search box */
   --jse-panel-background-color: #333333;
-  --jse-panel-background-highlight: #464646;
+  --jse-panel-background-border: 1px solid #464646;
+  --jse-panel-input-background: #656565;
   --jse-panel-color: #d4d4d4;
   --jse-panel-color-readonly: #737373;
-  --jse-panel-color-highlight: #8d8d8d;
   --jse-panel-border: 1px solid #3c3c3c;
   --jse-panel-dropdown-background: #656565;
   --jse-panel-dropdown-background-highlight: #7e7e7e;
   --jse-panel-dropdown-color: #d4d4d4;
+  --jse-panel-button-color-highlight: #e5e5e5;
+  --jse-panel-button-background-highlight: #464646;
 
   /* json key and values */
   --jse-key-color: #9cdcfe;
