--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -64,6 +64,8 @@
   --jse-context-menu-color-disabled: #9d9d9d;
   --jse-context-menu-separator-color: #7a7a7a;
   --jse-context-menu-button-size: calc(1em + 4px);
+  --jse-context-menu-tip-background: rgba(255, 255, 255, 0.2);
+  --jse-context-menu-tip-color: inherit;
 
   /* json key and values */
   --jse-key-color: #1a1a1a;
