--- a/src/lib/components/modes/treemode/highlight/SearchResultHighlighter.scss
+++ b/src/lib/components/modes/treemode/highlight/SearchResultHighlighter.scss
@@ -1,11 +1,11 @@
 @import '../../../../styles';
 
 .jse-highlight {
-  background-color: $highlight-color;
-  outline: 1px solid darken($highlight-color, 10%);
+  background-color: var(--jse-search-match-color);
+  outline: var(--jse-search-match-outline);
 
   &.jse-active {
-    background-color: $highlight-active-color;
-    outline: 1px solid darken($highlight-active-color, 10%);
+    background-color: var(--jse-search-match-active-color);
+    outline: var(--jse-search-match-active-outline);
   }
 }
