--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -77,6 +77,12 @@
   --jse-value-color-url: #008000;
   --jse-delimiter-color: rgba(0, 0, 0, 0.38);
 
+  /* highlighting of search matches */
+  --jse-search-match-color: #ffe665;
+  --jse-search-match-outline: 1px solid #ffd700;
+  --jse-search-match-active-color: #ffd700;
+  --jse-search-match-active-outline: 1px solid #e1be00;
+
   /* inline tags inside the JSON document */
   --jse-tag-background: rgba(0, 0, 0, 0.25);
   --jse-tag-color: #fff;
