--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -12,7 +12,7 @@
 
   border: 1px solid $black;
   border-radius: 2px;
-  background: $white;
+  background: inherit;
   outline: none;
   cursor: pointer;
 }
