--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   min-width: 0;
-  min-height: 150px;
+  min-height: $contents-min-height;
   border: 1px solid var(--jse-menu-background);
   position: relative;
   display: flex;
