--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,8 +1,5 @@
-$white: #fff;
 $black: #1a1a1a;
 $red: #ee5341;
-$contentsMinHeight: 150px;
-
 $dark-gray: #656565;
 $gray: rgb(157, 157, 157); // #9d9d9d
 $light-gray: rgb(192, 192, 192);
@@ -21,7 +18,7 @@ $padding-half: 0.5 * $padding;
 $menu-padding: 5px;
 $bottom-height: 5px;
 $contents-padding: 2px;
-
+$contents-min-height: 150px;
 $errors-overview-max-height: 25%;
 
 $box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
