--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -20,6 +20,7 @@
 
   font-family: var(--jse-font-family);
   font-size: var(--jse-font-size);
+  line-height: normal;
   background: var(--jse-background-color);
   color: var(--jse-color);
 
