fix: enum value color

--- a/src/lib/plugins/value/components/EnumValue.scss
+++ b/src/lib/plugins/value/components/EnumValue.scss
@@ -19,7 +19,7 @@
 
   &.jse-value:focus {
     // override the color to black when editing
-    color: $black;
+    color: var(--jse-color);
   }
 }
 
