fix: repair modal styling

--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -7,6 +7,7 @@
   height: 100%;
   min-width: 0;
   min-height: $contents-min-height;
+  line-height: normal;
   border: 1px solid var(--jse-menu-background);
   position: relative;
   display: flex;
