fix: replace the last scss color variables with css properties

--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -4,6 +4,9 @@
   --jse-color: #d4d4d4;
   --jse-selection-background-color: #464646;
   --jse-selection-background-dark-color: #343434;
+  --jse-collapsed-items-background: #565656;
+  --jse-collapsed-items-link-color: #b2b2b2;
+  --jse-collapsed-items-link-color-highlight: #ec8477;
   --jse-hover-background-color: #343434;
   --jse-edit-outline: 2px solid #d4d4d4;
 
