--- a/src/lib/components/modes/treemode/CollapsedItems.scss
+++ b/src/lib/components/modes/treemode/CollapsedItems.scss
@@ -1,8 +1,9 @@
 @import '../../../styles';
 
 div.jse-collapsed-items {
-  $color: var(--jse-delimiter-color);
-  $background-color: $background-gray;
+  $transparent-color: transparent;
+  $background-color: var(--jse-collapsed-items-background);
+  $color: var(--jse-collapsed-items-link-color);
 
   font-family: var(--jse-font-family);
   font-size: var(--jse-font-size);
@@ -13,13 +14,12 @@ div.jse-collapsed-items {
   padding: $padding-half;
   border: $size solid transparent;
   border-width: $size 0;
-  background-color: $background-color;
-  background-color: hsla(0, 0%, 0%, 0);
+  background-color: $transparent-color;
   background-image: linear-gradient($background-color, $background-color),
-    linear-gradient(to bottom right, transparent 50.5%, $background-color 50.5%),
-    linear-gradient(to bottom left, transparent 50.5%, $background-color 50.5%),
-    linear-gradient(to top right, transparent 50.5%, $background-color 50.5%),
-    linear-gradient(to top left, transparent 50.5%, $background-color 50.5%);
+    linear-gradient(to bottom right, $transparent-color 50.5%, $background-color 50.5%),
+    linear-gradient(to bottom left, $transparent-color 50.5%, $background-color 50.5%),
+    linear-gradient(to top right, $transparent-color 50.5%, $background-color 50.5%),
+    linear-gradient(to top left, $transparent-color 50.5%, $background-color 50.5%);
   background-repeat: repeat, repeat-x, repeat-x, repeat-x, repeat-x;
   background-position: 0 0, $size 0, $size 0, $size 100%, $size 100%;
   background-size: auto auto, 2 * $size 2 * $size, 2 * $size 2 * $size, 2 * $size 2 * $size,
@@ -51,7 +51,7 @@ div.jse-collapsed-items {
 
     &:hover,
     &:focus {
-      color: $red;
+      color: var(--jse-collapsed-items-link-color-highlight);
     }
   }
 }
