--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -21,6 +21,9 @@
   --jse-selection-background-light-color: #e8e8e8;
   --jse-hover-background-color: rgba(0, 0, 0, 0.06);
   --jse-selection-inline-color: #656565;
+  --jse-collapsed-items-background: #f5f5f5;
+  --jse-collapsed-items-link-color: rgba(0, 0, 0, 0.38);
+  --jse-collapsed-items-link-color-highlight: #ee5341;
   --jse-edit-outline: 2px solid #656565;
 
   /* messages */
