--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -27,7 +27,7 @@
         font-family: var(--jse-font-family-mono);
         font-size: var(--jse-font-size-mono);
         line-height: var(--jse-line-height);
-        color: var(--jse-key-color);
+        color: var(--jse-delimiter-color);
       }
 
       :global(.cm-gutters) {
