--- a/src/lib/components/modals/CopyPasteModal.scss
+++ b/src/lib/components/modals/CopyPasteModal.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 2 * $padding 0;
+    margin: $padding-double 0;
 
     .jse-shortcut {
       .jse-key {
