--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -13,13 +13,11 @@
     .jse-main-contents {
       flex: 1;
       display: flex;
-      gap: 2 * $padding;
+      gap: $padding-double;
       min-height: 0;
       box-sizing: border-box;
 
-      padding: 2 * $padding;
-      padding-top: 0;
-      padding-bottom: $padding;
+      padding: 0 $padding-double $padding;
 
       .jse-query-contents {
         flex: 1;
@@ -57,7 +55,7 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        gap: 2 * $padding;
+        gap: $padding-double;
 
         .jse-original-data {
           flex: 1;
@@ -88,8 +86,7 @@
     }
 
     .jse-actions {
-      padding: 2 * $padding;
-      padding-top: $padding;
+      padding: $padding $padding-double $padding-double;
     }
 
     @media screen and (max-width: 1200px) {
@@ -120,7 +117,7 @@
     box-sizing: border-box;
 
     .jse-label-inner {
-      margin-top: $padding * 2;
+      margin-top: $padding-double;
       margin-bottom: $padding-half;
       box-sizing: border-box;
 
