--- a/src/routes/examples/themes/jse-theme-big.css
+++ b/src/routes/examples/themes/jse-theme-big.css
@@ -7,6 +7,7 @@
   --jse-font-family-mono: courier New;
   --jse-font-size: 28px;
   --jse-font-size-mono: 28px;
+  --jse-padding: 10px;
 
   --jse-button-primary-background: #ff3e00;
   --jse-button-primary-background-highlight: #e74c1c;
