fix: minimize the usage of `--jse-font-family-mono`

--- a/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenu.scss
@@ -75,7 +75,7 @@
 
         font-family: var(--jse-font-family-mono);
         font-weight: bold;
-        font-size: 16px;
+        font-size: 16px; // fixed, to stay the same as the icons
 
         .jse-quote,
         .jse-plus {
