--- a/src/lib/plugins/value/components/EnumValue.scss
+++ b/src/lib/plugins/value/components/EnumValue.scss
@@ -6,8 +6,8 @@
   border: none;
   padding: 0;
 
-  font-family: var(--jse-font-family-mono);
-  font-size: var(--jse-font-size-mono);
+  font-family: inherit;
+  font-size: inherit;
 
   cursor: pointer;
   outline: none;
