--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -7,6 +7,8 @@
   height: 100%;
   min-width: 0;
   min-height: $contents-min-height;
+  font-family: var(--jse-font-family);
+  font-size: var(--jse-font-size);
   line-height: normal;
   border: 1px solid var(--jse-menu-background);
   position: relative;
